# Spirit-Tower

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  index.md  sonar-project.properties
Prueba2D/Assets/: Fountain.cs  TrampaFuego.cs  TrampaPicos.cs  Weapon.cs  lastEnemy.cs  shield.cs
Prueba2D/Assets/0x72_DungeonTilesetII_v1.3.1/Animation/: knight_f_idle_anim_f0.mat
Prueba2D/Assets/0x72_DungeonTilesetII_v1.3.1/Animation/Items/: chest1.controller  (+1 more)
Prueba2D/Assets/2D Pixel Dungeon Asset Pack/Palette/: Dungeon_Tileset_0.asset  Dungeon_Tileset_1.asset  Dungeon_Tileset_10.asset  Dungeon_Tileset_11.asset  Dungeon_Tileset_12.asset  Dungeon_Tileset_13.asset  Dungeon_Tileset_14.asset  Dungeon_Tileset_15.asset  Dungeon_Tileset_16.asset  Dungeon_Tileset_17.asset  Dungeon_Tileset_18.asset  Dungeon_Tileset_19.asset  Dungeon_Tileset_2.asset  Dungeon_Tileset_20.asset  Dungeon_Tileset_21.asset  Dungeon_Tileset_22.asset  Dungeon_Tileset_23.asset  Dungeon_Tileset_24.asset  Dungeon_Tileset_25.asset  Dungeon_Tileset_26.asset  Dungeon_Tileset_27.asset  Dungeon_Tileset_28.asset  Dungeon_Tileset_29.asset  Dungeon_Tileset_3.asset  Dungeon_Tileset_30.asset  Dungeon_Tileset_31.asset  Dungeon_Tileset_32.asset  Dungeon_Tileset_33.asset  Dungeon_Tileset_34.asset  Dungeon_Tileset_35.asset  Dungeon_Tileset_36.asset  Dungeon_Tileset_37.asset  Dungeon_Tileset_38.asset  Dungeon_Tileset_39.asset  Dungeon_Tileset_4.asset  Dungeon_Tileset_40.asset  Dungeon_Tileset_41.asset  Dungeon_Tileset_42.asset  Dungeon_Tileset_43.asset  Dungeon_Tileset_44.asset  (+61 more)
Prueba2D/Assets/Scenes/: Level1.unity  Level2.unity  Level_1.unity  Level_2.unity  Level_3.unity  Level_4.unity  Level_5.unity  Main.unity  PositionTest.unity
Prueba2D/Assets/Scripts/: Bottle_Life.cs  Client.cs  DungeonGeneration.cs  EnterDoor.cs  Eye.cs  KillEnemy.cs  LW asset.asset  MainMenu.cs  OpenChest.cs  Patrulla.cs  Pause.cs  PlayerMov.cs  PlayerMovement.cs  PlayerMovementLight.cs  ReachGoal.cs  Room.cs  TrampaFuego.cs  Win.cs
Prueba2D/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
client/: .gitignore
client/Assets/: Ground_palette.prefab  Silver.asset
client/Assets/Scenes/: Game.unity  Main.unity  PositionTest.unity
client/Assets/Scripts/: Client.cs  ClientTCP.cs  ClientUDP.cs  PlayerMov.cs  UI_manager.cs  playerMov.cs
client/Assets/Tiny RPG Forest/Scenes/: Demo.unity
client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
doc/: Doxyfile
doc/html/: _client_8cs.html  _dungeon_generation_8cs.html  _enter_door_8cs.html  _github_documentation_8md.html  _kill_enemy_8cs.html  _main_menu_8cs.html  _open_chest_8cs.html  _player_mov_8cs.html  _player_movement_8cs.html  _r_e_a_d_m_e_8md.html  _reach_goal_8cs.html  _room_8cs.html  _win_8cs.html  a-star_8cpp.html  a-star_8cpp.js  a-star_8cpp__incl.dot  a-star_8cpp__incl.md5  annotated.html  annotated_dup.js  backtracking_8cpp.html  backtracking_8cpp.js  backtracking_8cpp__incl.dot  backtracking_8cpp__incl.md5  bresenham__algorithm_8cpp.html  bresenham__algorithm_8cpp.js  bresenham__algorithm_8cpp__incl.dot  bresenham__algorithm_8cpp__incl.md5  class_client-members.html  class_client.html  class_client.js  class_client__coll__graph.dot  class_client__coll__graph.md5  class_client__inherit__graph.dot  class_client__inherit__graph.md5  class_dungeon_generation-members.html  class_dungeon_generation.html  class_dungeon_generation.js  class_dungeon_generation__coll__graph.dot  class_dungeon_generation__coll__graph.md5  class_dungeon_generation__inherit__graph.dot  (+173 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  (+33 more)
server/: .gitignore  CMakeLists.txt
server/include/: algorithms.hpp  game.hpp  ghost.hpp  player.hpp  server.hpp
server/src/: a-star.cpp  backtracking.cpp  bresenham_algorithm.cpp  enemies.cpp  game.cpp  genetic_algorithm.cpp  main.cpp  process.cpp  server.cpp
server/test/: CMakeLists.txt  serverTest.cpp
(+50 files in other folders)
